add table and update product
