# routes/auth_routes.go
@@ -1,14 +1,12 @@
 package routes
 
 import (
-	"github.com/alpaca-techwave/alpaca-mall-backend/controllers"
-	"github.com/alpaca-techwave/alpaca-mall-backend/middlewares"
 	"github.com/gofiber/fiber/v2"
+
+	"github.com/alpaca-techwave/alpaca-mall-backend/controllers"
 )
 
-
-func AuthRoutes(router fiber.Router){
-  jwt := middlewares.NewAuthMiddleware()
-  router.Post("/auth/login",controllers.Login)
-  router.Get("/auth/test",jwt,controllers.Protected)
+func AuthRoutes(router fiber.Router) {
+	router.Post("/auth/login", controllers.Login)
+	router.Post("/auth/admin-login", controllers.LoginAdmin)
 }
